<?xml version="1.0" encoding="utf-8"?>
<LinearLayout tools:context=".Login"
    android:id="@+id/mainLayColor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    style="@style/background"
    android:paddingHorizontal="@dimen/large_margin"
    tools:targetApi="o">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:padding="@dimen/very_large_margin"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@mipmap/logo"
            android:contentDescription="@string/logo" />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Please_login_here"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="2"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/normal_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layoutDirection="ltr"
            android:paddingHorizontal="@dimen/small_margin"
            android:maxLines="1"
            android:autofillHints="@string/email"
            android:minHeight="@dimen/normal_hight_button"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/gray"
            android:textDirection="ltr" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/normal_hight_button"
            android:layoutDirection="ltr"
            android:textDirection="ltr"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/small_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/bg_edittext"
            android:textColor="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/normal_margin"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:autofillHints="" />




        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/edit_password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--app:errorEnabled="true"-->
            <!--android:backgroundTint="@color/colorPrimaryDark"-->
            <!--android:textColorHint="@color/colorPrimaryDark">-->

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:minHeight="40dp"-->
                <!--android:layoutDirection="ltr"-->
                <!--android:textDirection="ltr"-->
                <!--android:hint="@string/password"-->
                <!--android:maxLines="1"-->
                <!--android:drawablePadding="@dimen/normal_margin"-->
                <!--android:backgroundTint="@color/colorPrimaryDark"-->
                <!--android:textColor="@color/colorPrimaryDark"-->
                <!--android:textColorHint="@color/colorPrimaryDark"-->
                <!--android:inputType="textPassword" />-->
        <!--</android.support.design.widget.TextInputLayout>-->


        <!--<EditText-->
            <!--android:id="@+id/name_edit_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:minHeight="40dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="@drawable/bg_edittext"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:drawableLeft="@drawable/ic_email"-->
            <!--android:drawablePadding="@dimen/normal_margin"-->
            <!--android:hint="@string/password"-->
            <!--android:textColorHint="@color/gray"-->
            <!--android:inputType="textPassword" />-->

    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/very_large_text"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_but_login"
            android:layout_width="@dimen/button_width_normal"
            android:layout_height="@dimen/normal_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/large_margin"
            android:background="@drawable/bg_blue_dark"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            />


        <Button
            android:id="@+id/but_sign_up"
            android:layout_width="@dimen/button_width_normal"
            android:layout_height="@dimen/normal_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@drawable/bg_blue_lite"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>



