<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    style="@style/background">
    <include layout="@layout/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:padding="@dimen/large_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginVertical="@dimen/normal_margin"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/main"
                android:weightSum="5"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@mipmap/promotions"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/promotions"
                    android:textSize="@dimen/large_text"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/main"
                android:weightSum="5"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@mipmap/prescriptions"
                    android:tint="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/prescriptions"
                    android:textSize="@dimen/large_text"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginVertical="@dimen/normal_margin"
            >

            <LinearLayout
                android:id="@+id/main_lnr_orders"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/main"
                android:weightSum="5"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@mipmap/list"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/orders"
                    android:textSize="@dimen/large_text"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_lnr_branches"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/main"
                android:weightSum="5"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@mipmap/branches"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/branches"
                    android:textSize="@dimen/large_text"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginVertical="@dimen/normal_margin"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/main"
                android:weightSum="5"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@mipmap/profile"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/profile"
                    android:textSize="@dimen/large_text"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/main"
                android:weightSum="5"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@mipmap/chat"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/contact_up"
                    android:textSize="@dimen/large_text"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/normal_margin"
            >


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/main"

                android:orientation="vertical"
                android:padding="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@mipmap/pill_remider"
                    android:tint="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/medical_remider"
                    android:textSize="@dimen/large_text"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>